fixed: Claim page UI changed

--- a/styles/pages/Claim.module.scss
+++ b/styles/pages/Claim.module.scss
@@ -29,7 +29,7 @@
       border-block-color: #000
     }
     // Main blue button
-    > button {
+    > div > button {
       float: right;
       margin-top: 1rem;
       font-weight: 500;
